v1.0.0/_sources/lcls-plc-rixs-optics_rixs_optics_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.140.71.1.1
      -
    * - Target IP address
      - 172.21.140.71
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _rixs_optics_pragmas:

Pragmas
-------

Total pragmas found: 289
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, , 2.4.2
        lcls-twincat-motion, SLAC, , 1.5.1
        lcls2-cc-lib, SLAC, Unset, 1.1.2
        PMPS, SLAC - LCLS, , 2.0.0
        Tc2_MC2, Beckhoff Automation GmbH, Unset, Unset
        Tc2_SerialCom, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Standard, Beckhoff Automation GmbH, Unset, Unset
        Tc2_System, Beckhoff Automation GmbH, Unset, Unset
        Tc2_TcpIp, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, Unset
        TcUnit, www.tcunit.org, , 1.0.1.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4390112 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 670453376 (8)
        Constants.bLittleEndian, BOOL, 670453200 (8)
        Constants.bSimulationMode, BOOL, 670453208 (8)
        Constants.CompilerVersion, VERSION, 670453280 (64)
        Constants.CompilerVersionNumeric, DWORD, 670453440 (32)
        Constants.nPackMode, UINT, 670453360 (16)
        Constants.nRegisterSize, WORD, 670453344 (16)
        Constants.RuntimeVersion, VERSION, 670453216 (64)
        Constants.RuntimeVersionNumeric, DWORD, 670453408 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4389632 (32)


GVL_COM_Buffers
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_COM_Buffers.Serial_RXBuffer_M1K2, ComBuffer, 663258976 (2512)
        GVL_COM_Buffers.Serial_TXBuffer_M1K2, ComBuffer, 663261488 (2512)


GVL_Constants
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Constants.cPiezoMaxVoltage, LREAL, 638751360 (64)
        GVL_Constants.cPiezoMinVoltage, LREAL, 638751424 (64)
        GVL_Constants.cPiezoRange, REAL, 638751264 (32)
        GVL_Constants.nGANTRY_TOLERANCE_NM_DEFAULT, LINT, 638751296 (64)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4389984 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4178816 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4178848 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_M1K1
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M1K1.M1K1_Pitch, HOMS_PitchMechanism, 663264000 (2496)
        GVL_M1K1.M1K1_Pitch.diEncCnt, LINT, 663266432 (64)


GVL_M1K1_BENDER_Constants
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M1K1_BENDER_Constants.nM1K1bendDS_ENC_REF, ULINT, 663266560 (64)
        GVL_M1K1_BENDER_Constants.nM1K1bendDS_PMPS_LowerLimit, ULINT, 663266816 (64)
        GVL_M1K1_BENDER_Constants.nM1K1bendDS_PMPS_UpperLimit, ULINT, 663266752 (64)
        GVL_M1K1_BENDER_Constants.nM1K1bendUS_ENC_REF, ULINT, 663266496 (64)
        GVL_M1K1_BENDER_Constants.nM1K1bendUS_PMPS_LowerLimit, ULINT, 663266688 (64)
        GVL_M1K1_BENDER_Constants.nM1K1bendUS_PMPS_UpperLimit, ULINT, 663266624 (64)


GVL_M1K1_BENDER_RTD
^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M1K1_BENDER_RTD.nM1K1DS_RTD_1, INT, 663266928 (16)
        GVL_M1K1_BENDER_RTD.nM1K1DS_RTD_2, INT, 663266944 (16)
        GVL_M1K1_BENDER_RTD.nM1K1DS_RTD_3, INT, 663266960 (16)
        GVL_M1K1_BENDER_RTD.nM1K1US_RTD_1, INT, 663266880 (16)
        GVL_M1K1_BENDER_RTD.nM1K1US_RTD_2, INT, 663266896 (16)
        GVL_M1K1_BENDER_RTD.nM1K1US_RTD_3, INT, 663266912 (16)


GVL_M1K1_Constants
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M1K1_Constants.nXDWN_ENC_REF, ULINT, 663267200 (64)
        GVL_M1K1_Constants.nXUP_ENC_REF, ULINT, 663267136 (64)
        GVL_M1K1_Constants.nYDWN_ENC_REF, ULINT, 663267072 (64)
        GVL_M1K1_Constants.nYUP_ENC_REF, ULINT, 663267008 (64)


GVL_M1K2
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M1K2.M1K2_Pitch, HOMS_PitchMechanism, 663267264 (2496)
        GVL_M1K2.M1K2_Pitch.diEncCnt, LINT, 663269696 (64)


GVL_M1K2_Constants
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M1K2_Constants.fRollLeverArm_um, REAL, 663271008 (32)
        GVL_M1K2_Constants.nXDWN_ENC_REF, ULINT, 663271232 (64)
        GVL_M1K2_Constants.nXUP_ENC_REF, ULINT, 663271168 (64)
        GVL_M1K2_Constants.nYLEFT_ENC_REF, ULINT, 663271040 (64)
        GVL_M1K2_Constants.nYRIGHT_ENC_REF, ULINT, 663271104 (64)


GVL_M2K2
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M2K2.nM2K2rX_ENC_REF, ULINT, 663269888 (64)
        GVL_M2K2.nM2K2X_ENC_REF, ULINT, 663269760 (64)
        GVL_M2K2.nM2K2Y_ENC_REF, ULINT, 663269824 (64)


GVL_M3K2
^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M3K2.nM3K2DS_ENC_REF, ULINT, 663270208 (64)
        GVL_M3K2.nM3K2DS_RTD_1, INT, 663270288 (16)
        GVL_M3K2.nM3K2DS_RTD_2, INT, 663270304 (16)
        GVL_M3K2.nM3K2DS_RTD_3, INT, 663270320 (16)
        GVL_M3K2.nM3K2rY_ENC_REF, ULINT, 663270080 (64)
        GVL_M3K2.nM3K2US_ENC_REF, ULINT, 663270144 (64)
        GVL_M3K2.nM3K2US_RTD_1, INT, 663266976 (16)
        GVL_M3K2.nM3K2US_RTD_2, INT, 663266992 (16)
        GVL_M3K2.nM3K2US_RTD_3, INT, 663270272 (16)
        GVL_M3K2.nM3K2X_ENC_REF, ULINT, 663269952 (64)
        GVL_M3K2.nM3K2Y_ENC_REF, ULINT, 663270016 (64)

.. raw:: html

   </details>
   <br />


GVL_M4K2
^^^^^^^^

.. raw:: html

   <details>
       <summary>15 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_M4K2.nM4K2DS_ENC_REF, ULINT, 663270592 (64)
        GVL_M4K2.nM4K2DS_PMPS_LowerLimit, ULINT, 663270848 (64)
        GVL_M4K2.nM4K2DS_PMPS_UpperLimit, ULINT, 663270784 (64)
        GVL_M4K2.nM4K2DS_RTD_1, INT, 663270960 (16)
        GVL_M4K2.nM4K2DS_RTD_2, INT, 663270976 (16)
        GVL_M4K2.nM4K2DS_RTD_3, INT, 663270992 (16)
        GVL_M4K2.nM4K2rX_ENC_REF, ULINT, 663270464 (64)
        GVL_M4K2.nM4K2US_ENC_REF, ULINT, 663270528 (64)
        GVL_M4K2.nM4K2US_PMPS_LowerLimit, ULINT, 663270720 (64)
        GVL_M4K2.nM4K2US_PMPS_UpperLimit, ULINT, 663270656 (64)
        GVL_M4K2.nM4K2US_RTD_1, INT, 663270912 (16)
        GVL_M4K2.nM4K2US_RTD_2, INT, 663270928 (16)
        GVL_M4K2.nM4K2US_RTD_3, INT, 663270944 (16)
        GVL_M4K2.nM4K2X_ENC_REF, ULINT, 663270336 (64)
        GVL_M4K2.nM4K2Y_ENC_REF, ULINT, 663270400 (64)

.. raw:: html

   </details>
   <br />


GVL_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PMPS.fbArbiter1, FB_Arbiter, 676173440 (466304)
        GVL_PMPS.fbArbiter2, FB_Arbiter, 676989440 (466304)
        GVL_PMPS.fbFastFaultOutput1, FB_HardwareFFOutput, 663737600 (494912)
        GVL_PMPS.fbFastFaultOutput1.q_xFastFaultOut, BOOL, 663737864 (8)
        GVL_PMPS.fbFastFaultOutput2, FB_HardwareFFOutput, 664232512 (494912)
        GVL_PMPS.fbFastFaultOutput2.q_xFastFaultOut, BOOL, 664232776 (8)
        GVL_PMPS.rPhotonEnergy, REAL, 664727424 (32)


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 8561344 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4392888 (8)
        GVL_Param_TcUnit.MaxNumberOfAsserts, UINT, 4392336 (16)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 8559232 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4392320 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 8559216 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4390160 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 8559200 (16)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 8559264 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 8559248 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 8559296 (2048)

.. raw:: html

   </details>
   <br />


GVL_SerialIO
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_SerialIO.Serial_stComIn_M1K2, EL6inData22B, 664727456 (192)
        GVL_SerialIO.Serial_stComOut_M1K2, EL6outData22B, 664727648 (192)


GVL_TcUnit
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsLogger, FB_ADSLogStringMessageFifoQueue, 4411008 (4128864)
        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 630422432 (8320864)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 8561360 (8)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4392872 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 630388352 (2048)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 4392928 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 630388320 (32)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 4392896 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 8561368 (8)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4392880 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 630390400 (16)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 4394976 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 8561376 (621826944)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4392352 (512)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 4395008 (16000)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 630390432 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 8559256 (8)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4392864 (8)

.. raw:: html

   </details>
   <br />


GVL_TestStructs
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TestStructs.TestPitch_LimitSwitches, HOMS_PitchMechanism, 638751488 (2496)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4389280 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4389408 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4389168 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4389440 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>276 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4181120 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4181024 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4181056 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180896 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180992 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180832 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4181088 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180864 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180928 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180960 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180704 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180608 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180672 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180576 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180736 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180768 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180640 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180800 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4180384 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4180448 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4181152 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4181184 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4182240 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4182176 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4182272 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4182304 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4182336 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4182368 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4182208 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4180272 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4180208 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4180336 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4180048 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4180320 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4180080 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4180032 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4180160 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4180352 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4180176 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4180192 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4180288 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4180064 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4180256 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4180112 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4180144 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4180224 (16)
        Global_Variables.ADSSTATE_START, UINT, 4180096 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4180128 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4180304 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4180240 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247936 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247968 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4246672 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4179744 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179968 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179984 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179856 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179776 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179840 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179872 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179792 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179808 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179824 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179888 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179904 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179920 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179936 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179952 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179760 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4180016 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4180000 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4390144 (16)
        Global_Variables.ASCII_DLE, BYTE, 4389136 (8)
        Global_Variables.ASCII_ETX, BYTE, 4389128 (8)
        Global_Variables.ASCII_NAK, BYTE, 4389144 (8)
        Global_Variables.ASCII_STX, BYTE, 4386904 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4182400 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4180376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4180368 (8)
        Global_Variables.COMERRORADS_INVALID_BAUDRATE, UDINT, 4388032 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTLEN, UDINT, 4387936 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTVER, UDINT, 4387968 (32)
        Global_Variables.COMERRORADS_INVALID_CMD, UDINT, 4387872 (32)
        Global_Variables.COMERRORADS_INVALID_COMPORT, UDINT, 4387840 (32)
        Global_Variables.COMERRORADS_INVALID_CTS_OUTCTRL, UDINT, 4388224 (32)
        Global_Variables.COMERRORADS_INVALID_DATABITS, UDINT, 4388096 (32)
        Global_Variables.COMERRORADS_INVALID_DATAPOINTER, UDINT, 4387904 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_OUTCTRL, UDINT, 4388256 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_SENS, UDINT, 4388288 (32)
        Global_Variables.COMERRORADS_INVALID_DTR_CTRL, UDINT, 4388160 (32)
        Global_Variables.COMERRORADS_INVALID_PARITY, UDINT, 4388064 (32)
        Global_Variables.COMERRORADS_INVALID_RTS_CTRL, UDINT, 4388192 (32)
        Global_Variables.COMERRORADS_INVALID_STOPBITS, UDINT, 4388128 (32)
        Global_Variables.COMERRORADS_INVALID_TL, UDINT, 4388000 (32)
        Global_Variables.COMERRORADS_NOT_INIT, UDINT, 4388320 (32)
        Global_Variables.COMERRORADS_PORT_CONNECTED, UDINT, 4388384 (32)
        Global_Variables.COMERRORADS_PORT_NOT_CONNECTED, UDINT, 4388416 (32)
        Global_Variables.COMERRORADS_RD_BUFFER_OVERRUN, UDINT, 4388352 (32)
        Global_Variables.COMERRORADS_RD_FAILURE, UDINT, 4388512 (32)
        Global_Variables.COMERRORADS_RD_THREAD_TIMEOUT, UDINT, 4388448 (32)
        Global_Variables.COMERRORADS_SERVER_INCOMPATIBLE, UDINT, 4388576 (32)
        Global_Variables.COMERRORADS_WR_FAILURE, UDINT, 4388544 (32)
        Global_Variables.COMERRORADS_WR_THREAD_TIMEOUT, UDINT, 4388480 (32)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4391136 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4260896 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260928 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4267200 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4267168 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4267136 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4267232 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4183072 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 638750912 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4384400 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184664 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4384408 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4384416 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 638750848 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248544 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386568 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4386272 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4386144 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246688 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4183056 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4248032 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4248016 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4248048 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4248064 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4248080 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4248384 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4248160 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248480 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4248256 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248448 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248512 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4248096 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4248128 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4248320 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4248224 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4248352 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4248416 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4248288 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4248192 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4182496 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182560 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4182528 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4182432 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182592 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4182464 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248896 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248640 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4248000 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184672 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184656 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184624 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184640 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247904 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4246336 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4246368 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4391072 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4391104 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4246240 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4246208 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4246176 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184608 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4246400 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4246528 (16)
        Global_Variables.MAX_RETRIES, INT, 4389152 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246552 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4246544 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246664 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4183168 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4391168 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246656 (8)
        Global_Variables.nCTRL_LOGGER_DATA_ARRAY_SIZE, UINT, 630390416 (16)
        Global_Variables.nWatchdogTime, BYTE, 4182424 (8)
        Global_Variables.PI, LREAL, 4183104 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246592 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246624 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246560 (32)
        Global_Variables.stCtrl_GLOBAL_CycleTimeInterpretation, ST_CTRL_CYCLE_TIME_INTERPRETATION, 638754304 (128)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4246432 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181984 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246464 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246496 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181728 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181696 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247872 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4181568 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181664 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181600 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4181440 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181760 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181632 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4181504 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4181536 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4181472 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4246272 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4246304 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181792 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181856 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181824 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181888 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181952 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181920 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4182408 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4182416 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255520 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255872 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255456 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255808 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4255232 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4254384 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254768 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4255392 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255744 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4255264 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255616 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4255328 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255680 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4183040 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4183024 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182928 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182864 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182880 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182896 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4182848 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182912 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182992 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182944 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182976 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4183008 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182960 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 638743872 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4390464 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4390208 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4390176 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4390400 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4390432 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4390272 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4390304 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4390336 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4390240 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4390368 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4390720 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4390592 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4390560 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4390496 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4390656 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4390688 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4390528 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4390624 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4391616 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4391200 (416)
        Global_Variables.TIMEOUT_QVZ, TIME, 4389216 (32)
        Global_Variables.TIMEOUT_WVZ, TIME, 4389248 (32)
        Global_Variables.TIMEOUT_ZVZ, TIME, 4389184 (32)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4182112 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4182016 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4182080 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4182048 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4182144 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255936 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>15 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_ControllerToolbox, ST_LibVersion, 638753984 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4178880 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4386976 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 638750976 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 638743584 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4387264 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4387552 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4179168 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4179456 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4184320 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4389696 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4392032 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183712 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 638743296 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 8539872 (288)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


MOTION_GVL
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MOTION_GVL.MAX_STATES, INT, 4394992 (16)
        MOTION_GVL.stInvalidState, DUT_PositionState, 8543040 (2880)
        MOTION_GVL.stUnknownState, DUT_PositionState, 8540160 (2880)


Main
^^^^

.. raw:: html

   <details>
       <summary>479 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Main.dummyBool, BOOL, 670453184 (8)
        Main.fbMotionStage_m1, FB_MotionStage, 664749056 (214848)
        Main.fbMotionStage_m1.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 664751552 (2048)
        Main.fbMotionStage_m1.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 664750528 (1024)
        Main.fbMotionStage_m12, FB_MotionStage, 665841472 (214848)
        Main.fbMotionStage_m12.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 665843968 (2048)
        Main.fbMotionStage_m12.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 665842944 (1024)
        Main.fbMotionStage_m13, FB_MotionStage, 666077504 (214848)
        Main.fbMotionStage_m13.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 666080000 (2048)
        Main.fbMotionStage_m13.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 666078976 (1024)
        Main.fbMotionStage_m14, FB_MotionStage, 666313536 (214848)
        Main.fbMotionStage_m14.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 666316032 (2048)
        Main.fbMotionStage_m14.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 666315008 (1024)
        Main.fbMotionStage_m15, FB_MotionStage, 666549568 (214848)
        Main.fbMotionStage_m15.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 666552064 (2048)
        Main.fbMotionStage_m15.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 666551040 (1024)
        Main.fbMotionStage_m17, FB_MotionStage, 666806784 (214848)
        Main.fbMotionStage_m17.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 666809280 (2048)
        Main.fbMotionStage_m17.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 666808256 (1024)
        Main.fbMotionStage_m18, FB_MotionStage, 667042816 (214848)
        Main.fbMotionStage_m18.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 667045312 (2048)
        Main.fbMotionStage_m18.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 667044288 (1024)
        Main.fbMotionStage_m2, FB_MotionStage, 664985088 (214848)
        Main.fbMotionStage_m2.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 664987584 (2048)
        Main.fbMotionStage_m2.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 664986560 (1024)
        Main.fbMotionStage_m3, FB_MotionStage, 665221120 (214848)
        Main.fbMotionStage_m3.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 665223616 (2048)
        Main.fbMotionStage_m3.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 665222592 (1024)
        Main.fbMotionStage_m4, FB_MotionStage, 665457152 (214848)
        Main.fbMotionStage_m4.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 665459648 (2048)
        Main.fbMotionStage_m4.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 665458624 (1024)
        Main.fbMotionStageM25, FB_MotionStage, 667405952 (214848)
        Main.fbMotionStageM25.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 667408448 (2048)
        Main.fbMotionStageM25.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 667407424 (1024)
        Main.fbMotionStageM26, FB_MotionStage, 667641984 (214848)
        Main.fbMotionStageM26.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 667644480 (2048)
        Main.fbMotionStageM26.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 667643456 (1024)
        Main.fbMotionStageM27, FB_MotionStage, 667878016 (214848)
        Main.fbMotionStageM27.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 667880512 (2048)
        Main.fbMotionStageM27.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 667879488 (1024)
        Main.fbMotionStageM28, FB_MotionStage, 668114048 (214848)
        Main.fbMotionStageM28.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 668116544 (2048)
        Main.fbMotionStageM28.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 668115520 (1024)
        Main.fbMotionStageM29, FB_MotionStage, 668350080 (214848)
        Main.fbMotionStageM29.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 668352576 (2048)
        Main.fbMotionStageM29.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 668351552 (1024)
        Main.fbMotionStageM30, FB_MotionStage, 668586112 (214848)
        Main.fbMotionStageM30.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 668588608 (2048)
        Main.fbMotionStageM30.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 668587584 (1024)
        Main.fbMotionStageM31, FB_MotionStage, 668822144 (214848)
        Main.fbMotionStageM31.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 668824640 (2048)
        Main.fbMotionStageM31.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 668823616 (1024)
        Main.fbMotionStageM32, FB_MotionStage, 669058176 (214848)
        Main.fbMotionStageM32.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 669060672 (2048)
        Main.fbMotionStageM32.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 669059648 (1024)
        Main.fbMotionStageM33, FB_MotionStage, 669294208 (214848)
        Main.fbMotionStageM33.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 669296704 (2048)
        Main.fbMotionStageM33.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 669295680 (1024)
        Main.fbMotionStageM34, FB_MotionStage, 669530240 (214848)
        Main.fbMotionStageM34.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 669532736 (2048)
        Main.fbMotionStageM34.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 669531712 (1024)
        Main.fbMotionStageM35, FB_MotionStage, 669766272 (214848)
        Main.fbMotionStageM35.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 669768768 (2048)
        Main.fbMotionStageM35.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 669767744 (1024)
        Main.fbMotionStageM36, FB_MotionStage, 670002304 (214848)
        Main.fbMotionStageM36.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 670004800 (2048)
        Main.fbMotionStageM36.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 670003776 (1024)
        Main.fbMotionStageM37, FB_MotionStage, 670238336 (214848)
        Main.fbMotionStageM37.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 670240832 (2048)
        Main.fbMotionStageM37.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 670239808 (1024)
        Main.M1, DUT_MotionStage, 664727872 (21184)
        Main.M1.Axis.NcToPlc, NCTOPLC_AXIS_REF, 664728960 (2048)
        Main.M1.Axis.PlcToNc, PLCTONC_AXIS_REF, 664727936 (1024)
        Main.M1.bBrakeRelease, BOOL, 664736920 (8)
        Main.M1.bHardwareEnable, BOOL, 664736928 (8)
        Main.M1.bHome, BOOL, 664736912 (8)
        Main.M1.bLimitBackwardEnable, BOOL, 664736904 (8)
        Main.M1.bLimitForwardEnable, BOOL, 664736896 (8)
        Main.M1.nRawEncoderINT, INT, 664737040 (16)
        Main.M1.nRawEncoderUINT, UINT, 664737024 (16)
        Main.M1.nRawEncoderULINT, ULINT, 664736960 (64)
        Main.M10, DUT_MotionStage, 665777920 (21184)
        Main.M10.Axis.NcToPlc, NCTOPLC_AXIS_REF, 665779008 (2048)
        Main.M10.Axis.PlcToNc, PLCTONC_AXIS_REF, 665777984 (1024)
        Main.M10.bBrakeRelease, BOOL, 665786968 (8)
        Main.M10.bHardwareEnable, BOOL, 665786976 (8)
        Main.M10.bHome, BOOL, 665786960 (8)
        Main.M10.bLimitBackwardEnable, BOOL, 665786952 (8)
        Main.M10.bLimitForwardEnable, BOOL, 665786944 (8)
        Main.M10.nRawEncoderINT, INT, 665787088 (16)
        Main.M10.nRawEncoderUINT, UINT, 665787072 (16)
        Main.M10.nRawEncoderULINT, ULINT, 665787008 (64)
        Main.M11, DUT_MotionStage, 665799104 (21184)
        Main.M11.Axis.NcToPlc, NCTOPLC_AXIS_REF, 665800192 (2048)
        Main.M11.Axis.PlcToNc, PLCTONC_AXIS_REF, 665799168 (1024)
        Main.M11.bBrakeRelease, BOOL, 665808152 (8)
        Main.M11.bHardwareEnable, BOOL, 665808160 (8)
        Main.M11.bHome, BOOL, 665808144 (8)
        Main.M11.bLimitBackwardEnable, BOOL, 665808136 (8)
        Main.M11.bLimitForwardEnable, BOOL, 665808128 (8)
        Main.M11.nRawEncoderINT, INT, 665808272 (16)
        Main.M11.nRawEncoderUINT, UINT, 665808256 (16)
        Main.M11.nRawEncoderULINT, ULINT, 665808192 (64)
        Main.M12, DUT_MotionStage, 665820288 (21184)
        Main.M12.Axis.NcToPlc, NCTOPLC_AXIS_REF, 665821376 (2048)
        Main.M12.Axis.PlcToNc, PLCTONC_AXIS_REF, 665820352 (1024)
        Main.M12.bBrakeRelease, BOOL, 665829336 (8)
        Main.M12.bHardwareEnable, BOOL, 665829344 (8)
        Main.M12.bHome, BOOL, 665829328 (8)
        Main.M12.bLimitBackwardEnable, BOOL, 665829320 (8)
        Main.M12.bLimitForwardEnable, BOOL, 665829312 (8)
        Main.M12.nRawEncoderINT, INT, 665829456 (16)
        Main.M12.nRawEncoderUINT, UINT, 665829440 (16)
        Main.M12.nRawEncoderULINT, ULINT, 665829376 (64)
        Main.M13, DUT_MotionStage, 666056320 (21184)
        Main.M13.Axis.NcToPlc, NCTOPLC_AXIS_REF, 666057408 (2048)
        Main.M13.Axis.PlcToNc, PLCTONC_AXIS_REF, 666056384 (1024)
        Main.M13.bBrakeRelease, BOOL, 666065368 (8)
        Main.M13.bHardwareEnable, BOOL, 666065376 (8)
        Main.M13.bHome, BOOL, 666065360 (8)
        Main.M13.bLimitBackwardEnable, BOOL, 666065352 (8)
        Main.M13.bLimitForwardEnable, BOOL, 666065344 (8)
        Main.M13.nRawEncoderINT, INT, 666065488 (16)
        Main.M13.nRawEncoderUINT, UINT, 666065472 (16)
        Main.M13.nRawEncoderULINT, ULINT, 666065408 (64)
        Main.M14, DUT_MotionStage, 666292352 (21184)
        Main.M14.Axis.NcToPlc, NCTOPLC_AXIS_REF, 666293440 (2048)
        Main.M14.Axis.PlcToNc, PLCTONC_AXIS_REF, 666292416 (1024)
        Main.M14.bBrakeRelease, BOOL, 666301400 (8)
        Main.M14.bHardwareEnable, BOOL, 666301408 (8)
        Main.M14.bHome, BOOL, 666301392 (8)
        Main.M14.bLimitBackwardEnable, BOOL, 666301384 (8)
        Main.M14.bLimitForwardEnable, BOOL, 666301376 (8)
        Main.M14.nRawEncoderINT, INT, 666301520 (16)
        Main.M14.nRawEncoderUINT, UINT, 666301504 (16)
        Main.M14.nRawEncoderULINT, ULINT, 666301440 (64)
        Main.M15, DUT_MotionStage, 666528384 (21184)
        Main.M15.Axis.NcToPlc, NCTOPLC_AXIS_REF, 666529472 (2048)
        Main.M15.Axis.PlcToNc, PLCTONC_AXIS_REF, 666528448 (1024)
        Main.M15.bBrakeRelease, BOOL, 666537432 (8)
        Main.M15.bHardwareEnable, BOOL, 666537440 (8)
        Main.M15.bHome, BOOL, 666537424 (8)
        Main.M15.bLimitBackwardEnable, BOOL, 666537416 (8)
        Main.M15.bLimitForwardEnable, BOOL, 666537408 (8)
        Main.M15.nRawEncoderINT, INT, 666537552 (16)
        Main.M15.nRawEncoderUINT, UINT, 666537536 (16)
        Main.M15.nRawEncoderULINT, ULINT, 666537472 (64)
        Main.M16, DUT_MotionStage, 666764416 (21184)
        Main.M16.Axis.NcToPlc, NCTOPLC_AXIS_REF, 666765504 (2048)
        Main.M16.Axis.PlcToNc, PLCTONC_AXIS_REF, 666764480 (1024)
        Main.M16.bBrakeRelease, BOOL, 666773464 (8)
        Main.M16.bHardwareEnable, BOOL, 666773472 (8)
        Main.M16.bHome, BOOL, 666773456 (8)
        Main.M16.bLimitBackwardEnable, BOOL, 666773448 (8)
        Main.M16.bLimitForwardEnable, BOOL, 666773440 (8)
        Main.M16.nRawEncoderINT, INT, 666773584 (16)
        Main.M16.nRawEncoderUINT, UINT, 666773568 (16)
        Main.M16.nRawEncoderULINT, ULINT, 666773504 (64)
        Main.M17, DUT_MotionStage, 666785600 (21184)
        Main.M17.Axis.NcToPlc, NCTOPLC_AXIS_REF, 666786688 (2048)
        Main.M17.Axis.PlcToNc, PLCTONC_AXIS_REF, 666785664 (1024)
        Main.M17.bBrakeRelease, BOOL, 666794648 (8)
        Main.M17.bHardwareEnable, BOOL, 666794656 (8)
        Main.M17.bHome, BOOL, 666794640 (8)
        Main.M17.bLimitBackwardEnable, BOOL, 666794632 (8)
        Main.M17.bLimitForwardEnable, BOOL, 666794624 (8)
        Main.M17.nRawEncoderINT, INT, 666794768 (16)
        Main.M17.nRawEncoderUINT, UINT, 666794752 (16)
        Main.M17.nRawEncoderULINT, ULINT, 666794688 (64)
        Main.M18, DUT_MotionStage, 667021632 (21184)
        Main.M18.Axis.NcToPlc, NCTOPLC_AXIS_REF, 667022720 (2048)
        Main.M18.Axis.PlcToNc, PLCTONC_AXIS_REF, 667021696 (1024)
        Main.M18.bBrakeRelease, BOOL, 667030680 (8)
        Main.M18.bHardwareEnable, BOOL, 667030688 (8)
        Main.M18.bHome, BOOL, 667030672 (8)
        Main.M18.bLimitBackwardEnable, BOOL, 667030664 (8)
        Main.M18.bLimitForwardEnable, BOOL, 667030656 (8)
        Main.M18.nRawEncoderINT, INT, 667030800 (16)
        Main.M18.nRawEncoderUINT, UINT, 667030784 (16)
        Main.M18.nRawEncoderULINT, ULINT, 667030720 (64)
        Main.M19, DUT_MotionStage, 667257664 (21184)
        Main.M19.Axis.NcToPlc, NCTOPLC_AXIS_REF, 667258752 (2048)
        Main.M19.Axis.PlcToNc, PLCTONC_AXIS_REF, 667257728 (1024)
        Main.M19.bBrakeRelease, BOOL, 667266712 (8)
        Main.M19.bHardwareEnable, BOOL, 667266720 (8)
        Main.M19.bHome, BOOL, 667266704 (8)
        Main.M19.bLimitBackwardEnable, BOOL, 667266696 (8)
        Main.M19.bLimitForwardEnable, BOOL, 667266688 (8)
        Main.M19.nRawEncoderINT, INT, 667266832 (16)
        Main.M19.nRawEncoderUINT, UINT, 667266816 (16)
        Main.M19.nRawEncoderULINT, ULINT, 667266752 (64)
        Main.M2, DUT_MotionStage, 664963904 (21184)
        Main.M2.Axis.NcToPlc, NCTOPLC_AXIS_REF, 664964992 (2048)
        Main.M2.Axis.PlcToNc, PLCTONC_AXIS_REF, 664963968 (1024)
        Main.M2.bBrakeRelease, BOOL, 664972952 (8)
        Main.M2.bHardwareEnable, BOOL, 664972960 (8)
        Main.M2.bHome, BOOL, 664972944 (8)
        Main.M2.bLimitBackwardEnable, BOOL, 664972936 (8)
        Main.M2.bLimitForwardEnable, BOOL, 664972928 (8)
        Main.M2.nRawEncoderINT, INT, 664973072 (16)
        Main.M2.nRawEncoderUINT, UINT, 664973056 (16)
        Main.M2.nRawEncoderULINT, ULINT, 664972992 (64)
        Main.M20, DUT_MotionStage, 667278848 (21184)
        Main.M20.Axis.NcToPlc, NCTOPLC_AXIS_REF, 667279936 (2048)
        Main.M20.Axis.PlcToNc, PLCTONC_AXIS_REF, 667278912 (1024)
        Main.M20.bBrakeRelease, BOOL, 667287896 (8)
        Main.M20.bHardwareEnable, BOOL, 667287904 (8)
        Main.M20.bHome, BOOL, 667287888 (8)
        Main.M20.bLimitBackwardEnable, BOOL, 667287880 (8)
        Main.M20.bLimitForwardEnable, BOOL, 667287872 (8)
        Main.M20.nRawEncoderINT, INT, 667288016 (16)
        Main.M20.nRawEncoderUINT, UINT, 667288000 (16)
        Main.M20.nRawEncoderULINT, ULINT, 667287936 (64)
        Main.M21, DUT_MotionStage, 667300032 (21184)
        Main.M21.Axis.NcToPlc, NCTOPLC_AXIS_REF, 667301120 (2048)
        Main.M21.Axis.PlcToNc, PLCTONC_AXIS_REF, 667300096 (1024)
        Main.M21.bBrakeRelease, BOOL, 667309080 (8)
        Main.M21.bHardwareEnable, BOOL, 667309088 (8)
        Main.M21.bHome, BOOL, 667309072 (8)
        Main.M21.bLimitBackwardEnable, BOOL, 667309064 (8)
        Main.M21.bLimitForwardEnable, BOOL, 667309056 (8)
        Main.M21.nRawEncoderINT, INT, 667309200 (16)
        Main.M21.nRawEncoderUINT, UINT, 667309184 (16)
        Main.M21.nRawEncoderULINT, ULINT, 667309120 (64)
        Main.M22, DUT_MotionStage, 667321216 (21184)
        Main.M22.Axis.NcToPlc, NCTOPLC_AXIS_REF, 667322304 (2048)
        Main.M22.Axis.PlcToNc, PLCTONC_AXIS_REF, 667321280 (1024)
        Main.M22.bBrakeRelease, BOOL, 667330264 (8)
        Main.M22.bHardwareEnable, BOOL, 667330272 (8)
        Main.M22.bHome, BOOL, 667330256 (8)
        Main.M22.bLimitBackwardEnable, BOOL, 667330248 (8)
        Main.M22.bLimitForwardEnable, BOOL, 667330240 (8)
        Main.M22.nRawEncoderINT, INT, 667330384 (16)
        Main.M22.nRawEncoderUINT, UINT, 667330368 (16)
        Main.M22.nRawEncoderULINT, ULINT, 667330304 (64)
        Main.M23, DUT_MotionStage, 667342400 (21184)
        Main.M23.Axis.NcToPlc, NCTOPLC_AXIS_REF, 667343488 (2048)
        Main.M23.Axis.PlcToNc, PLCTONC_AXIS_REF, 667342464 (1024)
        Main.M23.bBrakeRelease, BOOL, 667351448 (8)
        Main.M23.bHardwareEnable, BOOL, 667351456 (8)
        Main.M23.bHome, BOOL, 667351440 (8)
        Main.M23.bLimitBackwardEnable, BOOL, 667351432 (8)
        Main.M23.bLimitForwardEnable, BOOL, 667351424 (8)
        Main.M23.nRawEncoderINT, INT, 667351568 (16)
        Main.M23.nRawEncoderUINT, UINT, 667351552 (16)
        Main.M23.nRawEncoderULINT, ULINT, 667351488 (64)
        Main.M24, DUT_MotionStage, 667363584 (21184)
        Main.M24.Axis.NcToPlc, NCTOPLC_AXIS_REF, 667364672 (2048)
        Main.M24.Axis.PlcToNc, PLCTONC_AXIS_REF, 667363648 (1024)
        Main.M24.bBrakeRelease, BOOL, 667372632 (8)
        Main.M24.bHardwareEnable, BOOL, 667372640 (8)
        Main.M24.bHome, BOOL, 667372624 (8)
        Main.M24.bLimitBackwardEnable, BOOL, 667372616 (8)
        Main.M24.bLimitForwardEnable, BOOL, 667372608 (8)
        Main.M24.nRawEncoderINT, INT, 667372752 (16)
        Main.M24.nRawEncoderUINT, UINT, 667372736 (16)
        Main.M24.nRawEncoderULINT, ULINT, 667372672 (64)
        Main.M25, DUT_MotionStage, 667384768 (21184)
        Main.M25.Axis.NcToPlc, NCTOPLC_AXIS_REF, 667385856 (2048)
        Main.M25.Axis.PlcToNc, PLCTONC_AXIS_REF, 667384832 (1024)
        Main.M25.bBrakeRelease, BOOL, 667393816 (8)
        Main.M25.bHardwareEnable, BOOL, 667393824 (8)
        Main.M25.bHome, BOOL, 667393808 (8)
        Main.M25.bLimitBackwardEnable, BOOL, 667393800 (8)
        Main.M25.bLimitForwardEnable, BOOL, 667393792 (8)
        Main.M25.nRawEncoderINT, INT, 667393936 (16)
        Main.M25.nRawEncoderUINT, UINT, 667393920 (16)
        Main.M25.nRawEncoderULINT, ULINT, 667393856 (64)
        Main.M26, DUT_MotionStage, 667620800 (21184)
        Main.M26.Axis.NcToPlc, NCTOPLC_AXIS_REF, 667621888 (2048)
        Main.M26.Axis.PlcToNc, PLCTONC_AXIS_REF, 667620864 (1024)
        Main.M26.bBrakeRelease, BOOL, 667629848 (8)
        Main.M26.bHardwareEnable, BOOL, 667629856 (8)
        Main.M26.bHome, BOOL, 667629840 (8)
        Main.M26.bLimitBackwardEnable, BOOL, 667629832 (8)
        Main.M26.bLimitForwardEnable, BOOL, 667629824 (8)
        Main.M26.nRawEncoderINT, INT, 667629968 (16)
        Main.M26.nRawEncoderUINT, UINT, 667629952 (16)
        Main.M26.nRawEncoderULINT, ULINT, 667629888 (64)
        Main.M27, DUT_MotionStage, 667856832 (21184)
        Main.M27.Axis.NcToPlc, NCTOPLC_AXIS_REF, 667857920 (2048)
        Main.M27.Axis.PlcToNc, PLCTONC_AXIS_REF, 667856896 (1024)
        Main.M27.bBrakeRelease, BOOL, 667865880 (8)
        Main.M27.bHardwareEnable, BOOL, 667865888 (8)
        Main.M27.bHome, BOOL, 667865872 (8)
        Main.M27.bLimitBackwardEnable, BOOL, 667865864 (8)
        Main.M27.bLimitForwardEnable, BOOL, 667865856 (8)
        Main.M27.nRawEncoderINT, INT, 667866000 (16)
        Main.M27.nRawEncoderUINT, UINT, 667865984 (16)
        Main.M27.nRawEncoderULINT, ULINT, 667865920 (64)
        Main.M28, DUT_MotionStage, 668092864 (21184)
        Main.M28.Axis.NcToPlc, NCTOPLC_AXIS_REF, 668093952 (2048)
        Main.M28.Axis.PlcToNc, PLCTONC_AXIS_REF, 668092928 (1024)
        Main.M28.bBrakeRelease, BOOL, 668101912 (8)
        Main.M28.bHardwareEnable, BOOL, 668101920 (8)
        Main.M28.bHome, BOOL, 668101904 (8)
        Main.M28.bLimitBackwardEnable, BOOL, 668101896 (8)
        Main.M28.bLimitForwardEnable, BOOL, 668101888 (8)
        Main.M28.nRawEncoderINT, INT, 668102032 (16)
        Main.M28.nRawEncoderUINT, UINT, 668102016 (16)
        Main.M28.nRawEncoderULINT, ULINT, 668101952 (64)
        Main.M29, DUT_MotionStage, 668328896 (21184)
        Main.M29.Axis.NcToPlc, NCTOPLC_AXIS_REF, 668329984 (2048)
        Main.M29.Axis.PlcToNc, PLCTONC_AXIS_REF, 668328960 (1024)
        Main.M29.bBrakeRelease, BOOL, 668337944 (8)
        Main.M29.bHardwareEnable, BOOL, 668337952 (8)
        Main.M29.bHome, BOOL, 668337936 (8)
        Main.M29.bLimitBackwardEnable, BOOL, 668337928 (8)
        Main.M29.bLimitForwardEnable, BOOL, 668337920 (8)
        Main.M29.nRawEncoderINT, INT, 668338064 (16)
        Main.M29.nRawEncoderUINT, UINT, 668338048 (16)
        Main.M29.nRawEncoderULINT, ULINT, 668337984 (64)
        Main.M3, DUT_MotionStage, 665199936 (21184)
        Main.M3.Axis.NcToPlc, NCTOPLC_AXIS_REF, 665201024 (2048)
        Main.M3.Axis.PlcToNc, PLCTONC_AXIS_REF, 665200000 (1024)
        Main.M3.bBrakeRelease, BOOL, 665208984 (8)
        Main.M3.bHardwareEnable, BOOL, 665208992 (8)
        Main.M3.bHome, BOOL, 665208976 (8)
        Main.M3.bLimitBackwardEnable, BOOL, 665208968 (8)
        Main.M3.bLimitForwardEnable, BOOL, 665208960 (8)
        Main.M3.nRawEncoderINT, INT, 665209104 (16)
        Main.M3.nRawEncoderUINT, UINT, 665209088 (16)
        Main.M3.nRawEncoderULINT, ULINT, 665209024 (64)
        Main.M30, DUT_MotionStage, 668564928 (21184)
        Main.M30.Axis.NcToPlc, NCTOPLC_AXIS_REF, 668566016 (2048)
        Main.M30.Axis.PlcToNc, PLCTONC_AXIS_REF, 668564992 (1024)
        Main.M30.bBrakeRelease, BOOL, 668573976 (8)
        Main.M30.bHardwareEnable, BOOL, 668573984 (8)
        Main.M30.bHome, BOOL, 668573968 (8)
        Main.M30.bLimitBackwardEnable, BOOL, 668573960 (8)
        Main.M30.bLimitForwardEnable, BOOL, 668573952 (8)
        Main.M30.nRawEncoderINT, INT, 668574096 (16)
        Main.M30.nRawEncoderUINT, UINT, 668574080 (16)
        Main.M30.nRawEncoderULINT, ULINT, 668574016 (64)
        Main.M31, DUT_MotionStage, 668800960 (21184)
        Main.M31.Axis.NcToPlc, NCTOPLC_AXIS_REF, 668802048 (2048)
        Main.M31.Axis.PlcToNc, PLCTONC_AXIS_REF, 668801024 (1024)
        Main.M31.bBrakeRelease, BOOL, 668810008 (8)
        Main.M31.bHardwareEnable, BOOL, 668810016 (8)
        Main.M31.bHome, BOOL, 668810000 (8)
        Main.M31.bLimitBackwardEnable, BOOL, 668809992 (8)
        Main.M31.bLimitForwardEnable, BOOL, 668809984 (8)
        Main.M31.nRawEncoderINT, INT, 668810128 (16)
        Main.M31.nRawEncoderUINT, UINT, 668810112 (16)
        Main.M31.nRawEncoderULINT, ULINT, 668810048 (64)
        Main.M32, DUT_MotionStage, 669036992 (21184)
        Main.M32.Axis.NcToPlc, NCTOPLC_AXIS_REF, 669038080 (2048)
        Main.M32.Axis.PlcToNc, PLCTONC_AXIS_REF, 669037056 (1024)
        Main.M32.bBrakeRelease, BOOL, 669046040 (8)
        Main.M32.bHardwareEnable, BOOL, 669046048 (8)
        Main.M32.bHome, BOOL, 669046032 (8)
        Main.M32.bLimitBackwardEnable, BOOL, 669046024 (8)
        Main.M32.bLimitForwardEnable, BOOL, 669046016 (8)
        Main.M32.nRawEncoderINT, INT, 669046160 (16)
        Main.M32.nRawEncoderUINT, UINT, 669046144 (16)
        Main.M32.nRawEncoderULINT, ULINT, 669046080 (64)
        Main.M33, DUT_MotionStage, 669273024 (21184)
        Main.M33.Axis.NcToPlc, NCTOPLC_AXIS_REF, 669274112 (2048)
        Main.M33.Axis.PlcToNc, PLCTONC_AXIS_REF, 669273088 (1024)
        Main.M33.bBrakeRelease, BOOL, 669282072 (8)
        Main.M33.bHardwareEnable, BOOL, 669282080 (8)
        Main.M33.bHome, BOOL, 669282064 (8)
        Main.M33.bLimitBackwardEnable, BOOL, 669282056 (8)
        Main.M33.bLimitForwardEnable, BOOL, 669282048 (8)
        Main.M33.nRawEncoderINT, INT, 669282192 (16)
        Main.M33.nRawEncoderUINT, UINT, 669282176 (16)
        Main.M33.nRawEncoderULINT, ULINT, 669282112 (64)
        Main.M34, DUT_MotionStage, 669509056 (21184)
        Main.M34.Axis.NcToPlc, NCTOPLC_AXIS_REF, 669510144 (2048)
        Main.M34.Axis.PlcToNc, PLCTONC_AXIS_REF, 669509120 (1024)
        Main.M34.bBrakeRelease, BOOL, 669518104 (8)
        Main.M34.bHardwareEnable, BOOL, 669518112 (8)
        Main.M34.bHome, BOOL, 669518096 (8)
        Main.M34.bLimitBackwardEnable, BOOL, 669518088 (8)
        Main.M34.bLimitForwardEnable, BOOL, 669518080 (8)
        Main.M34.nRawEncoderINT, INT, 669518224 (16)
        Main.M34.nRawEncoderUINT, UINT, 669518208 (16)
        Main.M34.nRawEncoderULINT, ULINT, 669518144 (64)
        Main.M35, DUT_MotionStage, 669745088 (21184)
        Main.M35.Axis.NcToPlc, NCTOPLC_AXIS_REF, 669746176 (2048)
        Main.M35.Axis.PlcToNc, PLCTONC_AXIS_REF, 669745152 (1024)
        Main.M35.bBrakeRelease, BOOL, 669754136 (8)
        Main.M35.bHardwareEnable, BOOL, 669754144 (8)
        Main.M35.bHome, BOOL, 669754128 (8)
        Main.M35.bLimitBackwardEnable, BOOL, 669754120 (8)
        Main.M35.bLimitForwardEnable, BOOL, 669754112 (8)
        Main.M35.nRawEncoderINT, INT, 669754256 (16)
        Main.M35.nRawEncoderUINT, UINT, 669754240 (16)
        Main.M35.nRawEncoderULINT, ULINT, 669754176 (64)
        Main.M36, DUT_MotionStage, 669981120 (21184)
        Main.M36.Axis.NcToPlc, NCTOPLC_AXIS_REF, 669982208 (2048)
        Main.M36.Axis.PlcToNc, PLCTONC_AXIS_REF, 669981184 (1024)
        Main.M36.bBrakeRelease, BOOL, 669990168 (8)
        Main.M36.bHardwareEnable, BOOL, 669990176 (8)
        Main.M36.bHome, BOOL, 669990160 (8)
        Main.M36.bLimitBackwardEnable, BOOL, 669990152 (8)
        Main.M36.bLimitForwardEnable, BOOL, 669990144 (8)
        Main.M36.nRawEncoderINT, INT, 669990288 (16)
        Main.M36.nRawEncoderUINT, UINT, 669990272 (16)
        Main.M36.nRawEncoderULINT, ULINT, 669990208 (64)
        Main.M37, DUT_MotionStage, 670217152 (21184)
        Main.M37.Axis.NcToPlc, NCTOPLC_AXIS_REF, 670218240 (2048)
        Main.M37.Axis.PlcToNc, PLCTONC_AXIS_REF, 670217216 (1024)
        Main.M37.bBrakeRelease, BOOL, 670226200 (8)
        Main.M37.bHardwareEnable, BOOL, 670226208 (8)
        Main.M37.bHome, BOOL, 670226192 (8)
        Main.M37.bLimitBackwardEnable, BOOL, 670226184 (8)
        Main.M37.bLimitForwardEnable, BOOL, 670226176 (8)
        Main.M37.nRawEncoderINT, INT, 670226320 (16)
        Main.M37.nRawEncoderUINT, UINT, 670226304 (16)
        Main.M37.nRawEncoderULINT, ULINT, 670226240 (64)
        Main.M4, DUT_MotionStage, 665435968 (21184)
        Main.M4.Axis.NcToPlc, NCTOPLC_AXIS_REF, 665437056 (2048)
        Main.M4.Axis.PlcToNc, PLCTONC_AXIS_REF, 665436032 (1024)
        Main.M4.bBrakeRelease, BOOL, 665445016 (8)
        Main.M4.bHardwareEnable, BOOL, 665445024 (8)
        Main.M4.bHome, BOOL, 665445008 (8)
        Main.M4.bLimitBackwardEnable, BOOL, 665445000 (8)
        Main.M4.bLimitForwardEnable, BOOL, 665444992 (8)
        Main.M4.nRawEncoderINT, INT, 665445136 (16)
        Main.M4.nRawEncoderUINT, UINT, 665445120 (16)
        Main.M4.nRawEncoderULINT, ULINT, 665445056 (64)
        Main.M5, DUT_MotionStage, 665672000 (21184)
        Main.M5.Axis.NcToPlc, NCTOPLC_AXIS_REF, 665673088 (2048)
        Main.M5.Axis.PlcToNc, PLCTONC_AXIS_REF, 665672064 (1024)
        Main.M5.bBrakeRelease, BOOL, 665681048 (8)
        Main.M5.bHardwareEnable, BOOL, 665681056 (8)
        Main.M5.bHome, BOOL, 665681040 (8)
        Main.M5.bLimitBackwardEnable, BOOL, 665681032 (8)
        Main.M5.bLimitForwardEnable, BOOL, 665681024 (8)
        Main.M5.nRawEncoderINT, INT, 665681168 (16)
        Main.M5.nRawEncoderUINT, UINT, 665681152 (16)
        Main.M5.nRawEncoderULINT, ULINT, 665681088 (64)
        Main.M6, DUT_MotionStage, 665693184 (21184)
        Main.M6.Axis.NcToPlc, NCTOPLC_AXIS_REF, 665694272 (2048)
        Main.M6.Axis.PlcToNc, PLCTONC_AXIS_REF, 665693248 (1024)
        Main.M6.bBrakeRelease, BOOL, 665702232 (8)
        Main.M6.bHardwareEnable, BOOL, 665702240 (8)
        Main.M6.bHome, BOOL, 665702224 (8)
        Main.M6.bLimitBackwardEnable, BOOL, 665702216 (8)
        Main.M6.bLimitForwardEnable, BOOL, 665702208 (8)
        Main.M6.nRawEncoderINT, INT, 665702352 (16)
        Main.M6.nRawEncoderUINT, UINT, 665702336 (16)
        Main.M6.nRawEncoderULINT, ULINT, 665702272 (64)
        Main.M7, DUT_MotionStage, 665714368 (21184)
        Main.M7.Axis.NcToPlc, NCTOPLC_AXIS_REF, 665715456 (2048)
        Main.M7.Axis.PlcToNc, PLCTONC_AXIS_REF, 665714432 (1024)
        Main.M7.bBrakeRelease, BOOL, 665723416 (8)
        Main.M7.bHardwareEnable, BOOL, 665723424 (8)
        Main.M7.bHome, BOOL, 665723408 (8)
        Main.M7.bLimitBackwardEnable, BOOL, 665723400 (8)
        Main.M7.bLimitForwardEnable, BOOL, 665723392 (8)
        Main.M7.nRawEncoderINT, INT, 665723536 (16)
        Main.M7.nRawEncoderUINT, UINT, 665723520 (16)
        Main.M7.nRawEncoderULINT, ULINT, 665723456 (64)
        Main.M8, DUT_MotionStage, 665735552 (21184)
        Main.M8.Axis.NcToPlc, NCTOPLC_AXIS_REF, 665736640 (2048)
        Main.M8.Axis.PlcToNc, PLCTONC_AXIS_REF, 665735616 (1024)
        Main.M8.bBrakeRelease, BOOL, 665744600 (8)
        Main.M8.bHardwareEnable, BOOL, 665744608 (8)
        Main.M8.bHome, BOOL, 665744592 (8)
        Main.M8.bLimitBackwardEnable, BOOL, 665744584 (8)
        Main.M8.bLimitForwardEnable, BOOL, 665744576 (8)
        Main.M8.nRawEncoderINT, INT, 665744720 (16)
        Main.M8.nRawEncoderUINT, UINT, 665744704 (16)
        Main.M8.nRawEncoderULINT, ULINT, 665744640 (64)
        Main.M9, DUT_MotionStage, 665756736 (21184)
        Main.M9.Axis.NcToPlc, NCTOPLC_AXIS_REF, 665757824 (2048)
        Main.M9.Axis.PlcToNc, PLCTONC_AXIS_REF, 665756800 (1024)
        Main.M9.bBrakeRelease, BOOL, 665765784 (8)
        Main.M9.bHardwareEnable, BOOL, 665765792 (8)
        Main.M9.bHome, BOOL, 665765776 (8)
        Main.M9.bLimitBackwardEnable, BOOL, 665765768 (8)
        Main.M9.bLimitForwardEnable, BOOL, 665765760 (8)
        Main.M9.nRawEncoderINT, INT, 665765904 (16)
        Main.M9.nRawEncoderUINT, UINT, 665765888 (16)
        Main.M9.nRawEncoderULINT, ULINT, 665765824 (64)
        Main.sio_current, UINT, 664727840 (16)
        Main.sio_load, UINT, 664727856 (16)

.. raw:: html

   </details>
   <br />


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 8555712 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 8550608 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 8552320 (1696)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 8550624 (1696)
        PMPS_GVL.cstSafeBeam, ST_BeamParams, 8554016 (1696)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 8555744 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 8550368 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 8550464 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 8549312 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 8557856 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 8556832 (1024)
        PMPS_GVL.g_cBoundaries, INT, 8556768 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 8555728 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 8550528 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 8550592 (16)
        PMPS_GVL.PERange, PE_Ranges, 8550336 (32)
        PMPS_GVL.reVHyst, REAL, 8556800 (32)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 8547616 (1696)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 8545920 (1696)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 8550560 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 8550400 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 8558880 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 8556784 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 8558912 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 8558944 (256)


PRG_1_PlcTask
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_1_PlcTask.fbLogHandler, FB_LogHandler, 639100480 (5785856)


PRG_2_PMPS_POST
^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_2_PMPS_POST.delta, REAL, 658152928 (32)
        PRG_2_PMPS_POST.fb_vetoArbiter, FB_VetoArbiter, 663271296 (27104)
        PRG_2_PMPS_POST.fbArbiterIO, FB_SubSysToArbiter_IO, 658014720 (138176)
        PRG_2_PMPS_POST.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 658015520 (1696)
        PRG_2_PMPS_POST.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 658017216 (1696)
        PRG_2_PMPS_POST.fbArbiterIO.xTxPDO_state, BIT, 658018913 (1)
        PRG_2_PMPS_POST.fbArbiterIO.xTxPDO_toggle, BIT, 658018912 (1)
        PRG_2_PMPS_POST.ff2_ff1_link_optics, FB_FastFault, 658204352 (25088)
        PRG_2_PMPS_POST.ffRIX01, FB_FastFault, 663574464 (25088)
        PRG_2_PMPS_POST.ffRIX02, FB_FastFault, 663599552 (25088)
        PRG_2_PMPS_POST.ffRIX05, FB_FastFault, 663624640 (25088)

.. raw:: html

   </details>
   <br />


PRG_DAQ_ENCODER
^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>26 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_DAQ_ENCODER.bEnableSend, BOOL, 638917600 (8)
        PRG_DAQ_ENCODER.bNewTrigger, BOOL, 638917608 (8)
        PRG_DAQ_ENCODER.fbChannel, FB_AssembleChannel, 639097280 (640)
        PRG_DAQ_ENCODER.fbGetTaskIndex, GETCURTASKINDEX, 639097920 (128)
        PRG_DAQ_ENCODER.fbHeader, FB_AssembleHeader, 639096768 (512)
        PRG_DAQ_ENCODER.fbSocketHandler, FB_UDPSocketHandler, 638919744 (108544)
        PRG_DAQ_ENCODER.fbSocketSend, FB_SocketUdpSendTo, 639028288 (67968)
        PRG_DAQ_ENCODER.fEncScale, LREAL, 638919680 (64)
        PRG_DAQ_ENCODER.fMaxTimeInS, LREAL, 638918272 (64)
        PRG_DAQ_ENCODER.fMinTimeInS, LREAL, 638918336 (64)
        PRG_DAQ_ENCODER.fTimeInS, LREAL, 638918016 (64)
        PRG_DAQ_ENCODER.fTriggerRate, LREAL, 638918144 (64)
        PRG_DAQ_ENCODER.fUnderflowPercent, LREAL, 638919616 (64)
        PRG_DAQ_ENCODER.iLatchNeg, ULINT, 638917696 (64)
        PRG_DAQ_ENCODER.iLatchPos, ULINT, 638917632 (64)
        PRG_DAQ_ENCODER.iMaxTime, ULINT, 638917888 (64)
        PRG_DAQ_ENCODER.iMinTime, ULINT, 638917952 (64)
        PRG_DAQ_ENCODER.iPrevLatchPos, ULINT, 638918208 (64)
        PRG_DAQ_ENCODER.iTimeSinceLast, ULINT, 638918400 (64)
        PRG_DAQ_ENCODER.iTimeSincePos, ULINT, 638917824 (64)
        PRG_DAQ_ENCODER.iTriggerWidth, ULINT, 638918080 (64)
        PRG_DAQ_ENCODER.iUnderflowCount, ULINT, 638919552 (64)
        PRG_DAQ_ENCODER.nEncoderCount, ULINT, 638917760 (64)
        PRG_DAQ_ENCODER.nUpdateCycles, ULINT, 638918464 (64)
        PRG_DAQ_ENCODER.payload, DUT_01_Channel_NW, 639096256 (512)
        PRG_DAQ_ENCODER.stTaskInfo, PlcTaskSystemInfo, 638918528 (1024)

.. raw:: html

   </details>
   <br />


PRG_MR1K1_BEND
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>48 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_MR1K1_BEND.bLEDPower01, BOOL, 646574016 (8)
        PRG_MR1K1_BEND.bLEDPower02, BOOL, 646574024 (8)
        PRG_MR1K1_BEND.bLEDPower03, BOOL, 646574032 (8)
        PRG_MR1K1_BEND.bLEDPower04, BOOL, 646574040 (8)
        PRG_MR1K1_BEND.bM1K1PitchBusy, BOOL, 638917624 (8)
        PRG_MR1K1_BEND.bM1K1PitchDone, BOOL, 638917616 (8)
        PRG_MR1K1_BEND.bMR1K1_Y_ENC_Ready, BOOL, 646574080 (8)
        PRG_MR1K1_BEND.bMR1K1_Y_ENC_TxPDO, BOOL, 646574088 (8)
        PRG_MR1K1_BEND.fbM1K1PitchControl, FB_PitchControl, 646073472 (280960)
        PRG_MR1K1_BEND.fbM1K1PitchControl.fbMotionStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 646135552 (2048)
        PRG_MR1K1_BEND.fbM1K1PitchControl.fbMotionStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 646134528 (1024)
        PRG_MR1K1_BEND.fbMotionStage_m16, FB_MotionStage, 646354432 (214848)
        PRG_MR1K1_BEND.fbMotionStage_m16.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 646356928 (2048)
        PRG_MR1K1_BEND.fbMotionStage_m16.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 646355904 (1024)
        PRG_MR1K1_BEND.fbPitchRMSErrorM1K1, FB_RMSWatch, 645686720 (386624)
        PRG_MR1K1_BEND.fbXRMSErrorM1K1, FB_RMSWatch, 645299968 (386624)
        PRG_MR1K1_BEND.fbYRMSErrorM1K1, FB_RMSWatch, 644913216 (386624)
        PRG_MR1K1_BEND.fEncLeverArm_mm, LREAL, 646573952 (64)
        PRG_MR1K1_BEND.fEncRefPitchM1K1_urad, LREAL, 646573888 (64)
        PRG_MR1K1_BEND.fMaxPitchRMSErrorM1K1, LREAL, 646073344 (64)
        PRG_MR1K1_BEND.fMaxXRMSErrorM1K1, LREAL, 645686592 (64)
        PRG_MR1K1_BEND.fMaxYRMSErrorM1K1, LREAL, 645299840 (64)
        PRG_MR1K1_BEND.fMinPitchRMSErrorM1K1, LREAL, 646073408 (64)
        PRG_MR1K1_BEND.fMinXRMSErrorM1K1, LREAL, 645686656 (64)
        PRG_MR1K1_BEND.fMinYRMSErrorM1K1, LREAL, 645299904 (64)
        PRG_MR1K1_BEND.M1K1, DUT_HOMS, 644892544 (20672)
        PRG_MR1K1_BEND.M1K1.fbRunHOMS.bSTOEnable1, BOOL, 644893472 (8)
        PRG_MR1K1_BEND.M1K1.fbRunHOMS.bSTOEnable2, BOOL, 644893480 (8)
        PRG_MR1K1_BEND.M1K1.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.PEnc.Count, ULINT, 644903936 (64)
        PRG_MR1K1_BEND.M1K1.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.SEnc.Count, ULINT, 644904064 (64)
        PRG_MR1K1_BEND.M1K1.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.PEnc.Count, ULINT, 644894464 (64)
        PRG_MR1K1_BEND.M1K1.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.SEnc.Count, ULINT, 644894592 (64)
        PRG_MR1K1_BEND.M1K1.fbRunHOMS.stXdwnEnc, ST_RenishawAbsEnc, 644893888 (128)
        PRG_MR1K1_BEND.M1K1.fbRunHOMS.stXupEnc, ST_RenishawAbsEnc, 644893760 (128)
        PRG_MR1K1_BEND.M1K1.fbRunHOMS.stYdwnEnc, ST_RenishawAbsEnc, 644893632 (128)
        PRG_MR1K1_BEND.M1K1.fbRunHOMS.stYupEnc, ST_RenishawAbsEnc, 644893504 (128)
        PRG_MR1K1_BEND.mcReadParameterPitchM1K1, MC_ReadParameter, 646569536 (4352)
        PRG_MR1K1_BEND.nEncCntPitchM1K1, UDINT, 646569344 (32)
        PRG_MR1K1_BEND.nEncCntXdwnM1K1, UDINT, 646569312 (32)
        PRG_MR1K1_BEND.nEncCntXupM1K1, UDINT, 646569280 (32)
        PRG_MR1K1_BEND.nEncCntYdwnM1K1, UDINT, 644892512 (32)
        PRG_MR1K1_BEND.nEncCntYupM1K1, UDINT, 639100448 (32)
        PRG_MR1K1_BEND.nEncRefPitchM1K1, UDINT, 646569504 (32)
        PRG_MR1K1_BEND.nEncRefXdwnM1K1, UDINT, 646569472 (32)
        PRG_MR1K1_BEND.nEncRefXupM1K1, UDINT, 646569440 (32)
        PRG_MR1K1_BEND.nEncRefYdwnM1K1, UDINT, 646569408 (32)
        PRG_MR1K1_BEND.nEncRefYupM1K1, UDINT, 646569376 (32)
        PRG_MR1K1_BEND.nMR1K1_Y_ENC_PMPS, UDINT, 646574048 (32)

.. raw:: html

   </details>
   <br />


PRG_MR1K1_BEND_BENDER
^^^^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>27 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_MR1K1_BEND_BENDER.bM1K1DS_RTD_1_Err, BOOL, 647347960 (8)
        PRG_MR1K1_BEND_BENDER.bM1K1DS_RTD_2_Err, BOOL, 647347968 (8)
        PRG_MR1K1_BEND_BENDER.bM1K1DS_RTD_3_Err, BOOL, 647347976 (8)
        PRG_MR1K1_BEND_BENDER.bM1K1US_RTD_1_Err, BOOL, 647347936 (8)
        PRG_MR1K1_BEND_BENDER.bM1K1US_RTD_2_Err, BOOL, 647347944 (8)
        PRG_MR1K1_BEND_BENDER.bM1K1US_RTD_3_Err, BOOL, 647347952 (8)
        PRG_MR1K1_BEND_BENDER.fbBendDSRMSErrorM1K1, FB_RMSWatch, 646960896 (386624)
        PRG_MR1K1_BEND_BENDER.fbBendUSRMSErrorM1K1, FB_RMSWatch, 646574144 (386624)
        PRG_MR1K1_BEND_BENDER.fbBendUSRMSErrorMR1K1, INT, 647347984 (16)
        PRG_MR1K1_BEND_BENDER.fbLogHandler, FB_LogHandler, 647348032 (5785856)
        PRG_MR1K1_BEND_BENDER.ffBenderRange, FB_FastFault, 653133888 (25088)
        PRG_MR1K1_BEND_BENDER.fM1K1DS_RTD_1, REAL, 647347840 (32)
        PRG_MR1K1_BEND_BENDER.fM1K1DS_RTD_2, REAL, 647347872 (32)
        PRG_MR1K1_BEND_BENDER.fM1K1DS_RTD_3, REAL, 647347904 (32)
        PRG_MR1K1_BEND_BENDER.fM1K1US_RTD_1, REAL, 647347744 (32)
        PRG_MR1K1_BEND_BENDER.fM1K1US_RTD_2, REAL, 647347776 (32)
        PRG_MR1K1_BEND_BENDER.fM1K1US_RTD_3, REAL, 647347808 (32)
        PRG_MR1K1_BEND_BENDER.fMaxBendDSRMSErrorM1K1, LREAL, 647347520 (64)
        PRG_MR1K1_BEND_BENDER.fMaxBendUSRMSErrorM1K1, LREAL, 646960768 (64)
        PRG_MR1K1_BEND_BENDER.fMinBendDSRMSErrorM1K1, LREAL, 647347584 (64)
        PRG_MR1K1_BEND_BENDER.fMinBendUSRMSErrorM1K1, LREAL, 646960832 (64)
        PRG_MR1K1_BEND_BENDER.M1K1BENDbSTOEnable1, BOOL, 646574096 (8)
        PRG_MR1K1_BEND_BENDER.M1K1BENDbSTOEnable2, BOOL, 646574104 (8)
        PRG_MR1K1_BEND_BENDER.nEncCntBendDSM1K1, UDINT, 647347712 (32)
        PRG_MR1K1_BEND_BENDER.nEncCntBendUSM1K1, UDINT, 647347680 (32)
        PRG_MR1K1_BEND_BENDER.nEncRefBendDSM1K1, UDINT, 647347648 (32)
        PRG_MR1K1_BEND_BENDER.nEncRefBendUSM1K1, UDINT, 646574112 (32)

.. raw:: html

   </details>
   <br />


PRG_MR1K2_SWITCH
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>42 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_MR1K2_SWITCH.bM1K2PitchBusy, BOOL, 647348008 (8)
        PRG_MR1K2_SWITCH.bM1K2PitchDone, BOOL, 647348000 (8)
        PRG_MR1K2_SWITCH.fbM1K2PitchControl, FB_PitchControl, 654339904 (280960)
        PRG_MR1K2_SWITCH.fbM1K2PitchControl.fbMotionStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 654401984 (2048)
        PRG_MR1K2_SWITCH.fbM1K2PitchControl.fbMotionStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 654400960 (1024)
        PRG_MR1K2_SWITCH.fbMotionStage_m5, FB_MotionStage, 654620864 (214848)
        PRG_MR1K2_SWITCH.fbMotionStage_m5.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 654623360 (2048)
        PRG_MR1K2_SWITCH.fbMotionStage_m5.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 654622336 (1024)
        PRG_MR1K2_SWITCH.fbPitchRMSErrorM1K2, FB_RMSWatch, 653953152 (386624)
        PRG_MR1K2_SWITCH.fbXRMSErrorM1K2, FB_RMSWatch, 653566400 (386624)
        PRG_MR1K2_SWITCH.fbYRMSErrorM1K2, FB_RMSWatch, 653179648 (386624)
        PRG_MR1K2_SWITCH.fEncLeverArm_mm, LREAL, 654840512 (64)
        PRG_MR1K2_SWITCH.fEncRefPitchM1K2_urad, LREAL, 654840448 (64)
        PRG_MR1K2_SWITCH.fMaxPitchRMSErrorM1K2, LREAL, 654339776 (64)
        PRG_MR1K2_SWITCH.fMaxXRMSErrorM1K2, LREAL, 653953024 (64)
        PRG_MR1K2_SWITCH.fMaxYRMSErrorM1K2, LREAL, 653566272 (64)
        PRG_MR1K2_SWITCH.fMinPitchRMSErrorM1K2, LREAL, 654339840 (64)
        PRG_MR1K2_SWITCH.fMinXRMSErrorM1K2, LREAL, 653953088 (64)
        PRG_MR1K2_SWITCH.fMinYRMSErrorM1K2, LREAL, 653566336 (64)
        PRG_MR1K2_SWITCH.fYRoll_urad, LREAL, 654835712 (64)
        PRG_MR1K2_SWITCH.M1K2, DUT_HOMS, 653158976 (20672)
        PRG_MR1K2_SWITCH.M1K2.fbRunHOMS.bSTOEnable1, BOOL, 653159904 (8)
        PRG_MR1K2_SWITCH.M1K2.fbRunHOMS.bSTOEnable2, BOOL, 653159912 (8)
        PRG_MR1K2_SWITCH.M1K2.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.PEnc.Count, ULINT, 653170368 (64)
        PRG_MR1K2_SWITCH.M1K2.fbRunHOMS.fbAutoCoupleX.gantry_diff_limit.SEnc.Count, ULINT, 653170496 (64)
        PRG_MR1K2_SWITCH.M1K2.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.PEnc.Count, ULINT, 653160896 (64)
        PRG_MR1K2_SWITCH.M1K2.fbRunHOMS.fbAutoCoupleY.gantry_diff_limit.SEnc.Count, ULINT, 653161024 (64)
        PRG_MR1K2_SWITCH.M1K2.fbRunHOMS.stXdwnEnc, ST_RenishawAbsEnc, 653160320 (128)
        PRG_MR1K2_SWITCH.M1K2.fbRunHOMS.stXupEnc, ST_RenishawAbsEnc, 653160192 (128)
        PRG_MR1K2_SWITCH.M1K2.fbRunHOMS.stYdwnEnc, ST_RenishawAbsEnc, 653160064 (128)
        PRG_MR1K2_SWITCH.M1K2.fbRunHOMS.stYupEnc, ST_RenishawAbsEnc, 653159936 (128)
        PRG_MR1K2_SWITCH.mcReadParameterPitchM1K2, MC_ReadParameter, 654836096 (4352)
        PRG_MR1K2_SWITCH.nEncCntPitchM1K2, UDINT, 654835904 (32)
        PRG_MR1K2_SWITCH.nEncCntXdwnM1K2, UDINT, 654835872 (32)
        PRG_MR1K2_SWITCH.nEncCntXupM1K2, UDINT, 654835840 (32)
        PRG_MR1K2_SWITCH.nEncCntYleftM1K2, UDINT, 654835776 (32)
        PRG_MR1K2_SWITCH.nEncCntYrightM1K2, UDINT, 654835808 (32)
        PRG_MR1K2_SWITCH.nEncRefPitchM1K2, UDINT, 654836064 (32)
        PRG_MR1K2_SWITCH.nEncRefXdwnM1K2, UDINT, 654836032 (32)
        PRG_MR1K2_SWITCH.nEncRefXupM1K2, UDINT, 654836000 (32)
        PRG_MR1K2_SWITCH.nEncRefYleftM1K2, UDINT, 654835936 (32)
        PRG_MR1K2_SWITCH.nEncRefYrightM1K2, UDINT, 654835968 (32)

.. raw:: html

   </details>
   <br />


PRG_MR2K2_FLAT
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>17 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_MR2K2_FLAT.fbrXRMSErrorM2K2, FB_RMSWatch, 659003392 (386624)
        PRG_MR2K2_FLAT.fbXRMSErrorM2K2, FB_RMSWatch, 658229888 (386624)
        PRG_MR2K2_FLAT.fbYRMSErrorM2K2, FB_RMSWatch, 658616640 (386624)
        PRG_MR2K2_FLAT.fMaxrXRMSErrorM2K2, LREAL, 659390016 (64)
        PRG_MR2K2_FLAT.fMaxXRMSErrorM2K2, LREAL, 658616512 (64)
        PRG_MR2K2_FLAT.fMaxYRMSErrorM2K2, LREAL, 659003264 (64)
        PRG_MR2K2_FLAT.fMinrXRMSErrorM2K2, LREAL, 659390080 (64)
        PRG_MR2K2_FLAT.fMinXRMSErrorM2K2, LREAL, 658616576 (64)
        PRG_MR2K2_FLAT.fMinYRMSErrorM2K2, LREAL, 659003328 (64)
        PRG_MR2K2_FLAT.M2K2FLATbSTOEnable1, BOOL, 658203088 (8)
        PRG_MR2K2_FLAT.M2K2FLATbSTOEnable2, BOOL, 658203096 (8)
        PRG_MR2K2_FLAT.nEncCntrXM2K2, UDINT, 659390272 (32)
        PRG_MR2K2_FLAT.nEncCntXM2K2, UDINT, 659390208 (32)
        PRG_MR2K2_FLAT.nEncCntYM2K2, UDINT, 659390240 (32)
        PRG_MR2K2_FLAT.nEncRefrXM2K2, UDINT, 659390176 (32)
        PRG_MR2K2_FLAT.nEncRefXM2K2, UDINT, 658203104 (32)
        PRG_MR2K2_FLAT.nEncRefYM2K2, UDINT, 659390144 (32)

.. raw:: html

   </details>
   <br />


PRG_MR3K2_KBH
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>39 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_MR3K2_KBH.bM3K2DS_RTD_1_Err, BOOL, 661324600 (8)
        PRG_MR3K2_KBH.bM3K2DS_RTD_2_Err, BOOL, 661324608 (8)
        PRG_MR3K2_KBH.bM3K2DS_RTD_3_Err, BOOL, 661324616 (8)
        PRG_MR3K2_KBH.bM3K2US_RTD_1_Err, BOOL, 661324576 (8)
        PRG_MR3K2_KBH.bM3K2US_RTD_2_Err, BOOL, 661324584 (8)
        PRG_MR3K2_KBH.bM3K2US_RTD_3_Err, BOOL, 661324592 (8)
        PRG_MR3K2_KBH.fbdSRMSErrorM3K2, FB_RMSWatch, 660937344 (386624)
        PRG_MR3K2_KBH.fbrYRMSErrorM3K2, FB_RMSWatch, 660163840 (386624)
        PRG_MR3K2_KBH.fbUSRMSErrorM3K2, FB_RMSWatch, 660550592 (386624)
        PRG_MR3K2_KBH.fbXRMSErrorM3K2, FB_RMSWatch, 659390336 (386624)
        PRG_MR3K2_KBH.fbYRMSErrorM3K2, FB_RMSWatch, 659777088 (386624)
        PRG_MR3K2_KBH.fM3K2DS_RTD_1, REAL, 661324480 (32)
        PRG_MR3K2_KBH.fM3K2DS_RTD_2, REAL, 661324512 (32)
        PRG_MR3K2_KBH.fM3K2DS_RTD_3, REAL, 661324544 (32)
        PRG_MR3K2_KBH.fM3K2US_RTD_1, REAL, 661324384 (32)
        PRG_MR3K2_KBH.fM3K2US_RTD_2, REAL, 661324416 (32)
        PRG_MR3K2_KBH.fM3K2US_RTD_3, REAL, 661324448 (32)
        PRG_MR3K2_KBH.fMaxDSRMSErrorM3K2, LREAL, 661323968 (64)
        PRG_MR3K2_KBH.fMaxrYRMSErrorM3K2, LREAL, 660550464 (64)
        PRG_MR3K2_KBH.fMaxUSRMSErrorM3K2, LREAL, 660937216 (64)
        PRG_MR3K2_KBH.fMaxXRMSErrorM3K2, LREAL, 659776960 (64)
        PRG_MR3K2_KBH.fMaxYRMSErrorM3K2, LREAL, 660163712 (64)
        PRG_MR3K2_KBH.fMinDSRMSErrorM3K2, LREAL, 661324032 (64)
        PRG_MR3K2_KBH.fMinrYRMSErrorM3K2, LREAL, 660550528 (64)
        PRG_MR3K2_KBH.fMinUSRMSErrorM3K2, LREAL, 660937280 (64)
        PRG_MR3K2_KBH.fMinXRMSErrorM3K2, LREAL, 659777024 (64)
        PRG_MR3K2_KBH.fMinYRMSErrorM3K2, LREAL, 660163776 (64)
        PRG_MR3K2_KBH.M3K2KBHbSTOEnable1, BOOL, 661324624 (8)
        PRG_MR3K2_KBH.M3K2KBHbSTOEnable2, BOOL, 661324632 (8)
        PRG_MR3K2_KBH.nEncCntDSM3K2, UDINT, 661324352 (32)
        PRG_MR3K2_KBH.nEncCntrYM3K2, UDINT, 661324288 (32)
        PRG_MR3K2_KBH.nEncCntUSM3K2, UDINT, 661324320 (32)
        PRG_MR3K2_KBH.nEncCntXM3K2, UDINT, 661324224 (32)
        PRG_MR3K2_KBH.nEncCntYM3K2, UDINT, 661324256 (32)
        PRG_MR3K2_KBH.nEncRefDSM3K2, UDINT, 661324192 (32)
        PRG_MR3K2_KBH.nEncRefrYM3K2, UDINT, 661324128 (32)
        PRG_MR3K2_KBH.nEncRefUSM3K2, UDINT, 661324160 (32)
        PRG_MR3K2_KBH.nEncRefXM3K2, UDINT, 659390304 (32)
        PRG_MR3K2_KBH.nEncRefYM3K2, UDINT, 661324096 (32)

.. raw:: html

   </details>
   <br />


PRG_MR4K2_KBV
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>39 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_MR4K2_KBV.bM4K2DS_RTD_1_Err, BOOL, 663258936 (8)
        PRG_MR4K2_KBV.bM4K2DS_RTD_2_Err, BOOL, 663258944 (8)
        PRG_MR4K2_KBV.bM4K2DS_RTD_3_Err, BOOL, 663258952 (8)
        PRG_MR4K2_KBV.bM4K2US_RTD_1_Err, BOOL, 663258912 (8)
        PRG_MR4K2_KBV.bM4K2US_RTD_2_Err, BOOL, 663258920 (8)
        PRG_MR4K2_KBV.bM4K2US_RTD_3_Err, BOOL, 663258928 (8)
        PRG_MR4K2_KBV.fbdSRMSErrorM4K2, FB_RMSWatch, 662871680 (386624)
        PRG_MR4K2_KBV.fbrXRMSErrorM4K2, FB_RMSWatch, 662098176 (386624)
        PRG_MR4K2_KBV.fbUSRMSErrorM4K2, FB_RMSWatch, 662484928 (386624)
        PRG_MR4K2_KBV.fbXRMSErrorM4K2, FB_RMSWatch, 661324672 (386624)
        PRG_MR4K2_KBV.fbYRMSErrorM4K2, FB_RMSWatch, 661711424 (386624)
        PRG_MR4K2_KBV.fM4K2DS_RTD_1, REAL, 663258816 (32)
        PRG_MR4K2_KBV.fM4K2DS_RTD_2, REAL, 663258848 (32)
        PRG_MR4K2_KBV.fM4K2DS_RTD_3, REAL, 663258880 (32)
        PRG_MR4K2_KBV.fM4K2US_RTD_1, REAL, 663258720 (32)
        PRG_MR4K2_KBV.fM4K2US_RTD_2, REAL, 663258752 (32)
        PRG_MR4K2_KBV.fM4K2US_RTD_3, REAL, 663258784 (32)
        PRG_MR4K2_KBV.fMaxDSRMSErrorM4K2, LREAL, 663258304 (64)
        PRG_MR4K2_KBV.fMaxrXRMSErrorM4K2, LREAL, 662484800 (64)
        PRG_MR4K2_KBV.fMaxUSRMSErrorM4K2, LREAL, 662871552 (64)
        PRG_MR4K2_KBV.fMaxXRMSErrorM4K2, LREAL, 661711296 (64)
        PRG_MR4K2_KBV.fMaxYRMSErrorM4K2, LREAL, 662098048 (64)
        PRG_MR4K2_KBV.fMinDSRMSErrorM4K2, LREAL, 663258368 (64)
        PRG_MR4K2_KBV.fMinrXRMSErrorM4K2, LREAL, 662484864 (64)
        PRG_MR4K2_KBV.fMinUSRMSErrorM4K2, LREAL, 662871616 (64)
        PRG_MR4K2_KBV.fMinXRMSErrorM4K2, LREAL, 661711360 (64)
        PRG_MR4K2_KBV.fMinYRMSErrorM4K2, LREAL, 662098112 (64)
        PRG_MR4K2_KBV.M4K2KBVbSTOEnable1, BOOL, 663258960 (8)
        PRG_MR4K2_KBV.M4K2KBVbSTOEnable2, BOOL, 663258968 (8)
        PRG_MR4K2_KBV.nEncCntDSM4K2, UDINT, 663258688 (32)
        PRG_MR4K2_KBV.nEncCntrXM4K2, UDINT, 663258624 (32)
        PRG_MR4K2_KBV.nEncCntUSM4K2, UDINT, 663258656 (32)
        PRG_MR4K2_KBV.nEncCntXM4K2, UDINT, 663258560 (32)
        PRG_MR4K2_KBV.nEncCntYM4K2, UDINT, 663258592 (32)
        PRG_MR4K2_KBV.nEncRefDSM4K2, UDINT, 663258528 (32)
        PRG_MR4K2_KBV.nEncRefrXM4K2, UDINT, 663258464 (32)
        PRG_MR4K2_KBV.nEncRefUSM4K2, UDINT, 663258496 (32)
        PRG_MR4K2_KBV.nEncRefXM4K2, UDINT, 661324640 (32)
        PRG_MR4K2_KBV.nEncRefYM4K2, UDINT, 663258432 (32)

.. raw:: html

   </details>
   <br />


PRG_SL1K2_EXIT
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>50 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SL1K2_EXIT.bFanOn, BOOL, 656130280 (8)
        PRG_SL1K2_EXIT.bInit, BOOL, 656130296 (8)
        PRG_SL1K2_EXIT.bLEDPower, BOOL, 656130288 (8)
        PRG_SL1K2_EXIT.fbGap, FB_MotionStage, 656831040 (214848)
        PRG_SL1K2_EXIT.fbGap.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 656833536 (2048)
        PRG_SL1K2_EXIT.fbGap.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 656832512 (1024)
        PRG_SL1K2_EXIT.fbGige, FB_PPM_Gige, 657646784 (1088)
        PRG_SL1K2_EXIT.fbGige.bGigePower, BOOL, 657646832 (8)
        PRG_SL1K2_EXIT.fbGige.fbGetIllPercent.iRaw, INT, 657646944 (16)
        PRG_SL1K2_EXIT.fbGige.fbSetIllPercent.iRaw, INT, 657647680 (16)
        PRG_SL1K2_EXIT.fbGige.iIlluminatorINT, INT, 657646816 (16)
        PRG_SL1K2_EXIT.fBigDelta, LREAL, 657647936 (64)
        PRG_SL1K2_EXIT.fbPitch, FB_MotionStage, 656186496 (214848)
        PRG_SL1K2_EXIT.fbPitch.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 656188992 (2048)
        PRG_SL1K2_EXIT.fbPitch.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 656187968 (1024)
        PRG_SL1K2_EXIT.fbRoll, FB_MotionStage, 656401344 (214848)
        PRG_SL1K2_EXIT.fbRoll.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 656403840 (2048)
        PRG_SL1K2_EXIT.fbRoll.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 656402816 (1024)
        PRG_SL1K2_EXIT.fbStates, FB_XS_YAG_States, 657260736 (385024)
        PRG_SL1K2_EXIT.fbVertical, FB_MotionStage, 656616192 (214848)
        PRG_SL1K2_EXIT.fbVertical.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 656618688 (2048)
        PRG_SL1K2_EXIT.fbVertical.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 656617664 (1024)
        PRG_SL1K2_EXIT.fbYag, FB_MotionStage, 657045888 (214848)
        PRG_SL1K2_EXIT.fbYag.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 657048384 (2048)
        PRG_SL1K2_EXIT.fbYag.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 657047360 (1024)
        PRG_SL1K2_EXIT.FFO, FB_FastFault, 656161408 (25088)
        PRG_SL1K2_EXIT.fHighAccel, LREAL, 657648064 (64)
        PRG_SL1K2_EXIT.fLowAccel, LREAL, 657648128 (64)
        PRG_SL1K2_EXIT.fMaxVelocity, LREAL, 657648000 (64)
        PRG_SL1K2_EXIT.fSmallDelta, LREAL, 657647872 (64)
        PRG_SL1K2_EXIT.RTD_Crystal_BOTTOM, FB_TempSensor, 657646016 (256)
        PRG_SL1K2_EXIT.RTD_Crystal_BOTTOM.bError, BOOL, 657646216 (8)
        PRG_SL1K2_EXIT.RTD_Crystal_BOTTOM.bOverrange, BOOL, 657646232 (8)
        PRG_SL1K2_EXIT.RTD_Crystal_BOTTOM.bUnderrange, BOOL, 657646224 (8)
        PRG_SL1K2_EXIT.RTD_Crystal_BOTTOM.iRaw, INT, 657646240 (16)
        PRG_SL1K2_EXIT.RTD_Crystal_TOP, FB_TempSensor, 657645760 (256)
        PRG_SL1K2_EXIT.RTD_Crystal_TOP.bError, BOOL, 657645960 (8)
        PRG_SL1K2_EXIT.RTD_Crystal_TOP.bOverrange, BOOL, 657645976 (8)
        PRG_SL1K2_EXIT.RTD_Crystal_TOP.bUnderrange, BOOL, 657645968 (8)
        PRG_SL1K2_EXIT.RTD_Crystal_TOP.iRaw, INT, 657645984 (16)
        PRG_SL1K2_EXIT.RTD_HeatSync, FB_TempSensor, 657646528 (256)
        PRG_SL1K2_EXIT.RTD_HeatSync.bError, BOOL, 657646728 (8)
        PRG_SL1K2_EXIT.RTD_HeatSync.bOverrange, BOOL, 657646744 (8)
        PRG_SL1K2_EXIT.RTD_HeatSync.bUnderrange, BOOL, 657646736 (8)
        PRG_SL1K2_EXIT.RTD_HeatSync.iRaw, INT, 657646752 (16)
        PRG_SL1K2_EXIT.RTD_YAG, FB_TempSensor, 657646272 (256)
        PRG_SL1K2_EXIT.RTD_YAG.bError, BOOL, 657646472 (8)
        PRG_SL1K2_EXIT.RTD_YAG.bOverrange, BOOL, 657646488 (8)
        PRG_SL1K2_EXIT.RTD_YAG.bUnderrange, BOOL, 657646480 (8)
        PRG_SL1K2_EXIT.RTD_YAG.iRaw, INT, 657646496 (16)

.. raw:: html

   </details>
   <br />


PRG_SP1K1_MONO
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>77 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SP1K1_MONO.bLEDPower01, BOOL, 656130256 (8)
        PRG_SP1K1_MONO.bLEDPower02, BOOL, 656130264 (8)
        PRG_SP1K1_MONO.bLEDPower03, BOOL, 656130272 (8)
        PRG_SP1K1_MONO.bSTOEnable1, BOOL, 647348016 (8)
        PRG_SP1K1_MONO.bSTOEnable2, BOOL, 647348024 (8)
        PRG_SP1K1_MONO.fbMotionStage_g_h, FB_MotionStage, 655485312 (214848)
        PRG_SP1K1_MONO.fbMotionStage_g_h.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 655487808 (2048)
        PRG_SP1K1_MONO.fbMotionStage_g_h.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 655486784 (1024)
        PRG_SP1K1_MONO.fbMotionStage_g_pi, FB_MotionStage, 655055616 (214848)
        PRG_SP1K1_MONO.fbMotionStage_g_pi.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 655058112 (2048)
        PRG_SP1K1_MONO.fbMotionStage_g_pi.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 655057088 (1024)
        PRG_SP1K1_MONO.fbMotionStage_m_h, FB_MotionStage, 655270464 (214848)
        PRG_SP1K1_MONO.fbMotionStage_m_h.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 655272960 (2048)
        PRG_SP1K1_MONO.fbMotionStage_m_h.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 655271936 (1024)
        PRG_SP1K1_MONO.fbMotionStage_m_pi, FB_MotionStage, 654840768 (214848)
        PRG_SP1K1_MONO.fbMotionStage_m_pi.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 654843264 (2048)
        PRG_SP1K1_MONO.fbMotionStage_m_pi.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 654842240 (1024)
        PRG_SP1K1_MONO.fbMotionStage_s_io, FB_MotionStage, 655915008 (214848)
        PRG_SP1K1_MONO.fbMotionStage_s_io.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 655917504 (2048)
        PRG_SP1K1_MONO.fbMotionStage_s_io.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 655916480 (1024)
        PRG_SP1K1_MONO.fbMotionStage_s_r, FB_MotionStage, 655700160 (214848)
        PRG_SP1K1_MONO.fbMotionStage_s_r.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 655702656 (2048)
        PRG_SP1K1_MONO.fbMotionStage_s_r.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 655701632 (1024)
        PRG_SP1K1_MONO.fipi_read, LREAL, 656132544 (64)
        PRG_SP1K1_MONO.fipi_set, LREAL, 656132608 (64)
        PRG_SP1K1_MONO.FLOW1, LREAL, 656130304 (64)
        PRG_SP1K1_MONO.FLOW2, LREAL, 656130368 (64)
        PRG_SP1K1_MONO.flow_1, INT, 654840736 (16)
        PRG_SP1K1_MONO.flow_2, INT, 654840752 (16)
        PRG_SP1K1_MONO.gpi_upe, ST_RenishawAbsEnc, 656129984 (128)
        PRG_SP1K1_MONO.gpi_upeurad, LREAL, 656130176 (64)
        PRG_SP1K1_MONO.mpi_upe, ST_RenishawAbsEnc, 656129856 (128)
        PRG_SP1K1_MONO.mpi_upeurad, LREAL, 656130112 (64)
        PRG_SP1K1_MONO.PRES1, LREAL, 656130432 (64)
        PRG_SP1K1_MONO.pres_1, INT, 656130240 (16)
        PRG_SP1K1_MONO.RTD1, FB_TempSensor, 656130496 (256)
        PRG_SP1K1_MONO.RTD1.bError, BOOL, 656130696 (8)
        PRG_SP1K1_MONO.RTD1.bOverrange, BOOL, 656130712 (8)
        PRG_SP1K1_MONO.RTD1.bUnderrange, BOOL, 656130704 (8)
        PRG_SP1K1_MONO.RTD1.iRaw, INT, 656130720 (16)
        PRG_SP1K1_MONO.RTD2, FB_TempSensor, 656130752 (256)
        PRG_SP1K1_MONO.RTD2.bError, BOOL, 656130952 (8)
        PRG_SP1K1_MONO.RTD2.bOverrange, BOOL, 656130968 (8)
        PRG_SP1K1_MONO.RTD2.bUnderrange, BOOL, 656130960 (8)
        PRG_SP1K1_MONO.RTD2.iRaw, INT, 656130976 (16)
        PRG_SP1K1_MONO.RTD3, FB_TempSensor, 656131008 (256)
        PRG_SP1K1_MONO.RTD3.bError, BOOL, 656131208 (8)
        PRG_SP1K1_MONO.RTD3.bOverrange, BOOL, 656131224 (8)
        PRG_SP1K1_MONO.RTD3.bUnderrange, BOOL, 656131216 (8)
        PRG_SP1K1_MONO.RTD3.iRaw, INT, 656131232 (16)
        PRG_SP1K1_MONO.RTD4, FB_TempSensor, 656131264 (256)
        PRG_SP1K1_MONO.RTD4.bError, BOOL, 656131464 (8)
        PRG_SP1K1_MONO.RTD4.bOverrange, BOOL, 656131480 (8)
        PRG_SP1K1_MONO.RTD4.bUnderrange, BOOL, 656131472 (8)
        PRG_SP1K1_MONO.RTD4.iRaw, INT, 656131488 (16)
        PRG_SP1K1_MONO.RTD5, FB_TempSensor, 656131520 (256)
        PRG_SP1K1_MONO.RTD5.bError, BOOL, 656131720 (8)
        PRG_SP1K1_MONO.RTD5.bOverrange, BOOL, 656131736 (8)
        PRG_SP1K1_MONO.RTD5.bUnderrange, BOOL, 656131728 (8)
        PRG_SP1K1_MONO.RTD5.iRaw, INT, 656131744 (16)
        PRG_SP1K1_MONO.RTD6, FB_TempSensor, 656131776 (256)
        PRG_SP1K1_MONO.RTD6.bError, BOOL, 656131976 (8)
        PRG_SP1K1_MONO.RTD6.bOverrange, BOOL, 656131992 (8)
        PRG_SP1K1_MONO.RTD6.bUnderrange, BOOL, 656131984 (8)
        PRG_SP1K1_MONO.RTD6.iRaw, INT, 656132000 (16)
        PRG_SP1K1_MONO.RTD7, FB_TempSensor, 656132032 (256)
        PRG_SP1K1_MONO.RTD7.bError, BOOL, 656132232 (8)
        PRG_SP1K1_MONO.RTD7.bOverrange, BOOL, 656132248 (8)
        PRG_SP1K1_MONO.RTD7.bUnderrange, BOOL, 656132240 (8)
        PRG_SP1K1_MONO.RTD7.iRaw, INT, 656132256 (16)
        PRG_SP1K1_MONO.RTD8, FB_TempSensor, 656132288 (256)
        PRG_SP1K1_MONO.RTD8.bError, BOOL, 656132488 (8)
        PRG_SP1K1_MONO.RTD8.bOverrange, BOOL, 656132504 (8)
        PRG_SP1K1_MONO.RTD8.bUnderrange, BOOL, 656132496 (8)
        PRG_SP1K1_MONO.RTD8.iRaw, INT, 656132512 (16)
        PRG_SP1K1_MONO.sd_io_e_pmps, LREAL, 656157760 (64)
        PRG_SP1K1_MONO.sd_io_FFO, FB_FastFault, 656132672 (25088)

.. raw:: html

   </details>
   <br />


PRG_SPO_PMPS
^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>22 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SPO_PMPS.ffMR1K1Height, FB_FastFault, 657863040 (25088)
        PRG_SPO_PMPS.ffMR1K1Pitch, FB_FastFault, 657888128 (25088)
        PRG_SPO_PMPS.ffSP1K1GHorisontal, FB_FastFault, 657963392 (25088)
        PRG_SPO_PMPS.ffSP1K1GPitch, FB_FastFault, 657938304 (25088)
        PRG_SPO_PMPS.ffSP1K1MPitch, FB_FastFault, 657913216 (25088)
        PRG_SPO_PMPS.ffZos, FB_FastFault, 657988480 (25088)
        PRG_SPO_PMPS.nLowerMR1K1Height, UDINT, 658013600 (32)
        PRG_SPO_PMPS.nLowerMR1K1Pitch, UDINT, 658013664 (32)
        PRG_SPO_PMPS.nLowerSP1K1GH, UDINT, 658014016 (32)
        PRG_SPO_PMPS.nLowerSP1K1MPitch, UDINT, 658013728 (32)
        PRG_SPO_PMPS.nLowerSP1K1MPitch_1000, UDINT, 658013856 (32)
        PRG_SPO_PMPS.nLowerSP1K1MPitch_400, UDINT, 658013792 (32)
        PRG_SPO_PMPS.nUpperMR1K1Height, UDINT, 658013568 (32)
        PRG_SPO_PMPS.nUpperMR1K1Pitch, UDINT, 658013632 (32)
        PRG_SPO_PMPS.nUpperSP1K1GH, UDINT, 658013984 (32)
        PRG_SPO_PMPS.nUpperSP1K1GPitch_1000, UDINT, 658013952 (32)
        PRG_SPO_PMPS.nUpperSP1K1GPitch_400, UDINT, 658013920 (32)
        PRG_SPO_PMPS.nUpperSP1K1GPitch_700, UDINT, 658013888 (32)
        PRG_SPO_PMPS.nUpperSP1K1MPitch, UDINT, 658013696 (32)
        PRG_SPO_PMPS.nUpperSP1K1MPitch_1000, UDINT, 658013824 (32)
        PRG_SPO_PMPS.nUpperSP1K1MPitch_400, UDINT, 658013760 (32)
        PRG_SPO_PMPS.nZOSLower, UDINT, 658014048 (32)

.. raw:: html

   </details>
   <br />


PRG_ST1K1_ZOS
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_ST1K1_ZOS.fbZOS, FB_MotionStage, 657648192 (214848)
        PRG_ST1K1_ZOS.fbZOS.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 657650688 (2048)
        PRG_ST1K1_ZOS.fbZOS.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 657649664 (1024)


PRG_ZeroOrder_PMPS
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>34 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_ZeroOrder_PMPS.Ans, LREAL, 658204288 (64)
        PRG_ZeroOrder_PMPS.bLRG_Grating_IN, BOOL, 658014696 (8)
        PRG_ZeroOrder_PMPS.bMR1K1_Inserted, BOOL, 658203072 (8)
        PRG_ZeroOrder_PMPS.bSafeBenderRange, BOOL, 658014688 (8)
        PRG_ZeroOrder_PMPS.bZeroOrderBeam, BOOL, 658203080 (8)
        PRG_ZeroOrder_PMPS.bZOB_on_Lower_Stopper, BOOL, 658014712 (8)
        PRG_ZeroOrder_PMPS.bZOS_IN, BOOL, 658014704 (8)
        PRG_ZeroOrder_PMPS.Delta, LREAL, 658204224 (64)
        PRG_ZeroOrder_PMPS.ffZeroOrderBeam, FB_FastFault, 658177984 (25088)
        PRG_ZeroOrder_PMPS.ffZeroOrderBeamExitSlits, FB_FastFault, 663298400 (25088)
        PRG_ZeroOrder_PMPS.Hb0m3, LREAL, 658203840 (64)
        PRG_ZeroOrder_PMPS.Hbm1, LREAL, 658203648 (64)
        PRG_ZeroOrder_PMPS.Hbm2, LREAL, 658203712 (64)
        PRG_ZeroOrder_PMPS.Hbm3, LREAL, 658203776 (64)
        PRG_ZeroOrder_PMPS.Hi2, LREAL, 658229440 (64)
        PRG_ZeroOrder_PMPS.Hm1, LREAL, 658203328 (64)
        PRG_ZeroOrder_PMPS.Hm3, LREAL, 658203904 (64)
        PRG_ZeroOrder_PMPS.Hpiv, LREAL, 658203968 (64)
        PRG_ZeroOrder_PMPS.HZos, LREAL, 658203392 (64)
        PRG_ZeroOrder_PMPS.Pm1, LREAL, 658203264 (64)
        PRG_ZeroOrder_PMPS.Pm2, LREAL, 658203200 (64)
        PRG_ZeroOrder_PMPS.Pm3, LREAL, 658203136 (64)
        PRG_ZeroOrder_PMPS.Theta0, LREAL, 658229568 (64)
        PRG_ZeroOrder_PMPS.Theta_m1, LREAL, 658204032 (64)
        PRG_ZeroOrder_PMPS.Theta_m2, LREAL, 658204096 (64)
        PRG_ZeroOrder_PMPS.Theta_m3, LREAL, 658204160 (64)
        PRG_ZeroOrder_PMPS.Zbm1, LREAL, 658203456 (64)
        PRG_ZeroOrder_PMPS.Zbm2, LREAL, 658203520 (64)
        PRG_ZeroOrder_PMPS.Zbm3, LREAL, 658203584 (64)
        PRG_ZeroOrder_PMPS.Zi2, LREAL, 658229504 (64)
        PRG_ZeroOrder_PMPS.Zm1, LREAL, 658229632 (64)
        PRG_ZeroOrder_PMPS.Zmon, LREAL, 658229696 (64)
        PRG_ZeroOrder_PMPS.Zpiv, LREAL, 658229760 (64)
        PRG_ZeroOrder_PMPS.Zzos, LREAL, 658229824 (64)

.. raw:: html

   </details>
   <br />


P_Serial_Com
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        P_Serial_Com.fbSerialLineControl_EL6001_M1K2, SerialLineControl, 638799712 (10432)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4389664 (32)


PiezoSerial
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PiezoSerial.fbE621SerialDriver_M1K2, FB_PI_E621_SerialDriver, 638811680 (104032)
        PiezoSerial.rtInitParams_M1K2, R_TRIG, 638915712 (64)
        PiezoSerial.tonTimeoutRst_M1K2, TON, 638915776 (224)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 670507360 (960)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 670517024 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 670516512 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 670516640 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 670516768 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 670516384 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 670516896 (128)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 670453472 (2048)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__DaqTask, _Implicit_Task_Info, 670463328 (704)
        TwinCAT_SystemInfoVarList.__PiezoDriver, _Implicit_Task_Info, 670462624 (704)
        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 670464032 (704)
        TwinCAT_SystemInfoVarList.__SerialIO, _Implicit_Task_Info, 670461920 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 670455520 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 670457600 (4096)
        TwinCAT_SystemInfoVarList._TaskOid_DaqTask, OTCID, 670461824 (32)
        TwinCAT_SystemInfoVarList._TaskOid_PiezoDriver, OTCID, 670461760 (32)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 670461888 (32)
        TwinCAT_SystemInfoVarList._TaskOid_SerialIO, OTCID, 670461696 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_DaqTask, OTCID, 670461792 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PiezoDriver, OTCID, 670461728 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 670461856 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_SerialIO, OTCID, 670457568 (32)

.. raw:: html

   </details>
   <br />


lcls_twincat_optics
^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        lcls_twincat_optics.GVL_TestStructs.TestPitch_LimitSwitches.diEncCnt, LINT, 638753920 (64)


